--- a/react-study/src/styles/App.scss
+++ b/react-study/src/styles/App.scss
@@ -21,9 +21,42 @@ html,body{
 
   width: 100%;
   height: 100%;
-  overflow-y: hidden;
+  overflow-y: scroll;
 
   background-color: #ddd;
+  
+  @at-root{
+    .img-figure{
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      width: 320px;
+      height: 360px;
+      margin: 0;
+      padding: 40px;
+      
+      background-color: #fff;
+
+      box-sizing: boder-box;
+
+      img{
+        width: 100%;
+        height: 100%;
+      }
+
+    }
+    figcaption{
+      text-align: center;
+
+      .img-title{
+        margin: 10px 0 0 0;
+        color: dedede;
+        font-size: 16px;
+      }
+    }
+  }
+
 }
 
 .controller-nav{
